--- a/motorcycle.html
+++ b/motorcycle.html
@@ -27,7 +27,7 @@
             </div>
             <div>
                 <p class="large-font">
-                    WE HAVE EXPANED OUR<span class="text-size-2"
+                    WE HAVE EXPANDED OUR<span class="text-size-2"
                         >SERVICES TO INCLUDE</span
                     >MOTORCYCLE STORAGE
                 </p>
@@ -41,9 +41,83 @@
                     Close to 20 years ago , we realized that there was no safe
                     roadside assistance greared solely for motorcycles. Having
                     seen too many bikes being chained , dangerously,to the tow
-                    bars of regular tow trucks, and extensive market recharch we
+                    bars of regular tow trucks, and extensive market research we
                     started our company....
                 </p>
+            </div>
+        </div>
+        <div class="service-container">
+            <div class="heading-fixing">
+                <h1 class="service-container-heading">RENTAL CAR SERVICES</h1>
+                <p class="service-para">
+                    Find the best possible rental car rate. compare rates
+                    worldwide and save up 60% on deals from over 1,053 car
+                    rental companies.
+                </p>
+            </div>
+            <div class="logo-fixing">
+                <div class="location-logo">
+                    <img class="first-logo" src="./photos/location white.png" />
+                    <p class="service_logo-para1">LOCATION</p>
+                </div>
+                <div class="car-logo">
+                    <img class="second-logo" src="./photos/car white.png" />
+                    <p class="service_logo-para2">250+ Cars</p>
+                </div>
+                <div class="happy-user-logo">
+                    <img
+                        class="third-logo"
+                        src="./photos/happy user white.png"
+                    />
+                    <p class="service_logo-para3">Happy Users</p>
+                </div>
+            </div>
+        </div>
+        <div class="motorcycle_main-container">
+            <div class="motorcycle_main-header">
+                <h1>FULL MOTORCYCLE SERVICE</h1>
+            </div>
+            <div class="motorcycle_main-image">
+                <img class="image3" src="./photos/motorcycle-page bike3.jpg" />
+            </div>
+            <div class="motorcycle_main-paragraph">
+                <div class="motorcycle_first para">
+                    <p>
+                        As the owner of a motorcycle,it s your legal duty to
+                        ensure it is roadworthy and does not pose a hazard to
+                        yourself, passengers,other read users or the general
+                        public
+                    </p>
+                </div>
+                <div class="motorcycle_second para">
+                    <p>
+                        A full motorcycle service will ensure any mechanical or
+                        electrical problems are ironed out ahead of your MOT and
+                        course before they affected the safe operation.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="advertisment">
+            <div class="advertisement-bike1">
+                <img
+                    class="super-bike1 flex"
+                    src="./photos/motorcycle bike4.jpeg"
+                />
+            </div>
+            <div class="flex-container">
+                <div class="advertisement-bike2">
+                    <img
+                        class="super-bike2 flex"
+                        src="./photos/motorcycle bike5.jpeg"
+                    />
+                </div>
+                <div class="advertisement-bike3">
+                    <img
+                        class="super-bike3 flex"
+                        src="./photos/motorcycle bike6.jpeg"
+                    />
+                </div>
             </div>
         </div>
     </body>
