--- a/motorcycle.html
+++ b/motorcycle.html
@@ -120,5 +120,116 @@
                 </div>
             </div>
         </div>
+        <div class="head">
+            <h1>OUR GALLERY</h1>
+        </div>
+        <div class="gallery_main-container">
+            <div class="gallery-first">
+                <img
+                    class="flexbox-images1 image"
+                    src="./photos/gallery pic1.jpeg"
+                />
+            </div>
+            <div class="gallery-second">
+                <img
+                    class="flexbox-images2 image"
+                    src="./photos/gallary image2.jpeg"
+                />
+            </div>
+            <div class="gallery-third">
+                <img
+                    class="flexbox-images3 image"
+                    src="./photos/gallery image3.jpeg"
+                />
+            </div>
+            <div class="gallery-fourth">
+                <img
+                    class="flexbox-images4 image"
+                    src="/photos/gallery image4.jpeg"
+                />
+            </div>
+            <div class="gallery-five">
+                <img
+                    class="flexbox-images5 image"
+                    src="/photos/galllery 'image5.jpeg"
+                />
+            </div>
+            <div class="gallery-six">
+                <img
+                    class="flexbox-images6 image"
+                    src="./photos/gallery image6.jpeg"
+                />
+            </div>
+        </div>
+        <div class="switch">
+            <button
+                class="submit"
+                type="button"
+                onclick="alert('Hello bike lovers!')"
+            >
+                Learn More
+            </button>
+        </div>
+        <div class="last-container">
+            <div class="last-container-image1">
+                <img class="last-image1" src="/photos/motorcycle bike5.jpeg" />
+
+                <h1 class="last-para1">
+                    WE HAVE EXPANDED OUR SERVICES TO INCLUDE MOTORCYCLE STORAGE
+                </h1>
+            </div>
+            <div class="last-container-image2">
+                <img class="last-image2" src="./photos/motorcycle bike4.jpeg" />
+
+                <h2 class="last-para2">
+                    Close to 20 years ago ,we realized that there was no safe
+                    roadside assistance geared slolely for motorcycles. Having
+                    seen too many bikes being chained, dangerously,to the tow
+                    bars of regular tow trucks, and expensive market recharch,we
+                    started our company...
+                </h2>
+            </div>
+        </div>
+        <div class="contact-container">
+            <div class="last-heading">
+                <h1 class="heading">CONTACT US</h1>
+                <p class="paragraph-last">
+                    Sample text. click to select the text box. Click again or
+                    double click to start editing the text.
+                </p>
+            </div>
+            <div class="flexbox-1-3">
+                <div class="location-way">
+                    <img
+                        class="location icon"
+                        src="./photos/location img2.png"
+                    />
+                    <h1>ADDRESS</h1>
+                    <h2>27 13 LOWE HEAVEN</h2>
+                </div>
+                <div class="phone-way">
+                    <img class="phone icon" src="/photos/phone ringing.png" />
+                    <h1>PHONE</h1>
+                    <h2>111 343 43 43</h2>
+                </div>
+                <div class="email-way">
+                    <img class="email icon" src="./photos/mail image.png" />
+                    <h1>EMAIL</h1>
+                    <h2>bsiness@info.com</h2>
+                </div>
+            </div>
+        </div>
+        <div class="ending-container">
+            <p class="ending-para">
+                Sample text. Click to select the text box. Click again or double
+                click to start editing the text.
+            </p>
+            <p class="ending-para-2">
+                <a href="www.gooogle.com">Template</a>Created with<a
+                    href="www.youtube.com"
+                    >Nicepage</a
+                >
+            </p>
+        </div>
     </body>
 </html>
